# freely_fluent

./: .dockerignore  .gitignore  CONTEXT.md  Dockerfile  PRD.md  README.md  TASKS.md  app.py  audio_service.py  brave_image_search.py  cantodict_lookup.py  card_generator.py  card_store.py  docker-compose.yml  jyutping_format.py  main.py  pipeline_orchestrator.py  pyproject.toml  session_manager.py  wiktionary_audio.py
.github/workflows/: build.yaml
data/: cards.db
graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
static/: style.css
templates/: _image_cards.html  _pos_dropdown.html  _translate_entries.html  audio_step.html  base.html  completion.html  image_step.html  index.html  translate_step.html
tests/: test_app.py  test_app_image_preserve.py  test_app_load_more.py  test_app_remove_word.py  test_app_session_isolation.py  test_app_session_lifecycle.py  test_audio_persistence.py  test_audio_service.py  test_audio_service_surface.py  test_audio_step.py  test_audio_step_pos.py  test_brave_image_search.py  test_cantodict_lookup.py  test_card_generator.py  test_card_generator_opus.py  test_card_store.py  test_card_store_images.py  test_card_templates.py  test_completion_pos.py  test_completion_step.py  test_dockerfile.py  test_facelift.py  test_generate_apkg_opus_e2e.py  test_index_step.py  test_jyutping_format.py  test_main.py  test_pipeline_orchestrator.py  test_pos_toggle.py  test_readme.py  test_session_manager.py  test_session_manager_pos.py  test_translate_step.py  test_wiktionary_audio.py
(+3 files in other folders)
